--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
     "clean": "cd android && ./gradlew clean"
   },
   "dependencies": {
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/stack": "^7.1.1",
     "babel-plugin-module-resolver": "^5.0.2",
     "react": "18.3.1",
     "react-native": "0.77.1",
-    "react-native-reanimated": "^3.16.7"
+    "react-native-gesture-handler": "^2.24.0",
+    "react-native-reanimated": "^3.16.7",
+    "react-native-safe-area-context": "^5.2.0",
+    "react-native-screens": "^4.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
