--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.3.1",
     "react-native": "0.77.1",
     "react-native-config": "^1.5.5",
+    "react-native-draggable": "^3.3.0",
     "react-native-gesture-handler": "^2.24.0",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "^5.2.0",
