--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/stack": "^7.1.1",
     "axios": "^1.7.9",
     "babel-plugin-module-resolver": "^5.0.2",
+    "bigdecimal": "^0.6.1",
     "lottie-react-native": "^7.2.2",
     "react": "18.3.1",
     "react-native": "0.77.1",
