--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-native-gesture-handler": "^2.24.0",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "^5.2.0",
-    "react-native-screens": "^4.8.0"
+    "react-native-screens": "^4.8.0",
+    "react-native-status-bar-height": "^2.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
